corrected textarea spacing

--- a/packages/scandipwa/src/component/ProductReviewForm/ProductReviewForm.style.scss
+++ b/packages/scandipwa/src/component/ProductReviewForm/ProductReviewForm.style.scss
@@ -24,8 +24,6 @@
         row-gap: 24px;
 
         .FieldGroup-Wrapper {
-            // margin-block-end: 14px;
-                    
             .FieldGroup {
                 &_hasError, &_isValid {
                     padding-inline-start: 0;
@@ -33,7 +31,7 @@
                 }
                 
                 &-ErrorMessages {
-                    margin-block-start: -3px;
+                    margin-block-start: -4px;
                 }
             }
         }
@@ -55,6 +53,10 @@
       
         .Field {
             margin-block-start: 12px;
+
+            &-ErrorMessages {
+                padding-block-start: 3px;
+            }
         }
 
         input,
@@ -115,6 +117,7 @@
         color: var(--primary-error-color);
         font-size: 12px;
         text-align: start;
+        padding-block-start: 0;
     }
 
     & &-Button {
